--- a/operation add.ipynb
+++ b/operation add.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,18 +84,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding synonyms of the word search...\n",
+      "Stemming...\n",
+      "Lemmitizating...\n",
+      "Resultant list: \n",
+      "['find a lost item', 'find', 'find inform', 'rout up', 'explor', 'forag', 'frisk', 'hunt', 'look', 'manhunt', 'pursuit', 'quest', 'ransack', 'scour', 'search']\n",
+      "\n",
+      "\n",
+      "Finding synonyms of the word add...\n",
+      "Stemming...\n",
+      "Lemmitizating...\n",
+      "Resultant list: \n",
+      "['add', 'comput a sum', 'add on', 'adjoin', 'button', 'butyl', 'compound', 'concaten', 'enrich', 'foot', 'fortifi', 'gild the lili', 'includ', 'inject', 'intercal']\n",
+      "\n",
+      "\n",
+      "Tranformed string is: ['Can', 'search', 'himanshu', 'singh']\n",
+      "Operation: search\n"
+     ]
+    }
+   ],
    "source": [
     "from LinkedIn_Operation_identification import findSynonyms, lemmitization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,18 +137,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1dbf29b21576>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcur\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0msectionsSyn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcur\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msectionsSyn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
    "source": [
     "synSections = []\n",
     "for sec in sections:\n",
-    "    synSections.append(findSynonyms(sec))"
+    "    synSections.append(findSynonyms(sec))\n",
+    "    \n",
+    "sectionsSyn = []\n",
+    "for idx, sec in enumerate(synSections):\n",
+    "    for i, cur in enumerate(sec):\n",
+    "        if( i == 0):\n",
+    "            sectionsSyn[i, idx] = cur\n",
+    "            continue\n",
+    "        if cur not in sectionsSyn:\n",
+    "            sectionsSyn.append(cur)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,13 +237,93 @@
        "  'projection']]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "synSections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s',\n",
+       " 'u',\n",
+       " 'b',\n",
+       " 'j',\n",
+       " 'e',\n",
+       " 'c',\n",
+       " 't',\n",
+       " 'a person',\n",
+       " 'experience',\n",
+       " 'appalling',\n",
+       " 'augury',\n",
+       " 'familiarization',\n",
+       " 'flash',\n",
+       " 'good time',\n",
+       " 'life',\n",
+       " 'loss',\n",
+       " 'near-death experience',\n",
+       " 'ordeal',\n",
+       " 'out-of-body experience',\n",
+       " 'reliving',\n",
+       " 'reminder',\n",
+       " 'taste',\n",
+       " 'time',\n",
+       " 's',\n",
+       " 'c',\n",
+       " 'h',\n",
+       " 'o',\n",
+       " 'o',\n",
+       " 'l',\n",
+       " 'education',\n",
+       " 'going to school',\n",
+       " 'seeing art',\n",
+       " 'Education',\n",
+       " 'Educação',\n",
+       " 'watching television',\n",
+       " 'a classroom',\n",
+       " 'reading',\n",
+       " 'college',\n",
+       " 'attending school',\n",
+       " 'educationist',\n",
+       " 'academic program',\n",
+       " 'Department of Education',\n",
+       " 'point system',\n",
+       " 'tuition',\n",
+       " 'A',\n",
+       " ' ',\n",
+       " 'p',\n",
+       " 'r',\n",
+       " 'o',\n",
+       " 'j',\n",
+       " 'e',\n",
+       " 'c',\n",
+       " 't',\n",
+       " 'project',\n",
+       " 'moneymaker',\n",
+       " 'A project',\n",
+       " 'introduce',\n",
+       " 'offer',\n",
+       " 'shoot',\n",
+       " 'silhouette',\n",
+       " 'projection']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sectionsSyn"
    ]
   },
   {
@@ -397,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "synSections"
@@ -406,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %load LinkedIn_Operation_identification_Copy1\n",
@@ -549,7 +675,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "flag = 0\n",
