--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -10,33 +10,27 @@
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from nltk.tree import Tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from nltk.tree import Tree\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
     "from LinkedIn_Operation_identification import findSynonyms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "synJob = findSynonyms('job')\n",
-    "JobSyn = []\n",
+    "JobSyn = ['job']\n",
     "for syn in synJob:\n",
     "    if syn not in JobSyn:\n",
     "        JobSyn.append(syn)\n",
     "\n",
     "# JobSyn\n",
     "\n",
-    "synOpen = findSynonyms('openings')\n",
+    "synOpen = findSynonyms('opening')\n",
     "OpenSyn = ['opening']\n",
     "for syn in synOpen:\n",
     "    if syn not in OpenSyn:\n",
@@ -45,7 +39,7 @@
     "# OpenSyn\n",
     "\n",
     "synPos = findSynonyms('position')\n",
-    "PosSyn = []\n",
+    "PosSyn = ['position']\n",
     "for syn in synPos:\n",
     "    if syn not in PosSyn:\n",
     "        PosSyn.append(syn)\n",
@@ -70,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -85,23 +79,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def basicTrans(text):\n",
-    "    #tokenize\n",
-    "    token = word_tokenize(text)\n",
-    "    \n",
-    "    for word in token:\n",
-    "        "
+    "def stemming(text):\n",
+    "    ps = PorterStemmer()\n",
+    "\n",
+    "    # Stemming\n",
+    "    StemmedSynWord = []\n",
+    "#     for idx, w in enumerate(synWord):\n",
+    "    w = word_tokenize(text)\n",
+    "    tempword = \"\"\n",
+    "    for index, every in enumerate(w):\n",
+    "        tempword = tempword + (ps.stem(every))\n",
+    "        if (index != len(w) - 1):\n",
+    "            tempword = tempword + \" \"\n",
+    "    if(tempword not in StemmedSynWord):\n",
+    "        StemmedSynWord.append(tempword)\n",
+    "\n",
+    "    return StemmedSynWord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['search for job at linkedin']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = stemming(text)\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -201,15 +226,6 @@
     "    position = (\" \".join(childNodes))\n",
     "    print(position)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
