--- a/LinkedIn_Operation_identification.ipynb
+++ b/LinkedIn_Operation_identification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +151,7 @@
      "output_type": "stream",
      "text": [
       "Finding synonyms of the word search...\n",
+      "['find a lost item', 'find', 'finding information', 'rout up', 'find a lost item', 'finding a lost item', 'exploration', 'foraging', 'frisk', 'hunt', 'looking', 'manhunt', 'pursuit', 'quest', 'ransacking', 'scouring', 'search', 'search', 'search', 'search']\n",
       "Stemming...\n",
       "Lemmitizating...\n",
       "Resultant list: \n",
@@ -158,6 +159,7 @@
       "\n",
       "\n",
       "Finding synonyms of the word add...\n",
+      "['add', 'add', 'compute a sum', 'add on', 'add', 'add', 'add', 'add', 'adjoin', 'button', 'butylate', 'compound', 'concatenate', 'enrich', 'foot', 'fortify', 'gild the lily', 'include', 'inject', 'intercalate']\n",
       "Stemming...\n",
       "Lemmitizating...\n",
       "Resultant list: \n",
@@ -178,7 +180,8 @@
     "for word in wordList:\n",
     "    print(\"Finding synonyms of the word \" + word + \"...\")\n",
     "    synword = findSynonyms(word)\n",
-    "\n",
+    "    print(synword)\n",
+    "    \n",
     "    print(\"Stemming...\")\n",
     "    StemmedSynWord = stemming(synword)\n",
     "\n",
