--- a/position identification.ipynb
+++ b/position identification.ipynb
@@ -725,18 +725,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def findNchildren(ptree):\n",
-    "    nchild = 0\n",
-    "    for tree in ptree:\n",
-    "        for child in tree:\n",
-    "            nchild += 1\n",
-    "    return nchild"
+    "# def findNchildren(ptree):\n",
+    "#     nchild = 0\n",
+    "#     for tree in ptree:\n",
+    "#         for child in tree:\n",
+    "#             nchild += 1\n",
+    "#     return nchild"
    ]
   },
   {
@@ -760,123 +760,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nchildren = findNchildren(ptree)\n",
-    "# if nchildren <= 2 => only operation and name exists, find nothing\n",
+    "# nchildren = findNchildren(ptree)\n",
+    "# # if nchildren <= 2 => only operation and name exists, find nothing\n",
     "\n",
-    "# if(nchildren > 2):\n",
-    "print(nchildren)\n"
+    "# # if(nchildren > 2):\n",
+    "# print(nchildren)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'nltk.tree.Tree'>\n",
-      "(FRAG\n",
-      "  (NP (NN search))\n",
-      "  (PP\n",
-      "    (IN for)\n",
-      "    (NP (NN machine) (NN learning) (NN job) (NNS openings)))\n",
-      "  (PP (IN at) (NP (NNP LinkedIn))))\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NP (NN search))\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(PP (IN for) (NP (NN machine) (NN learning) (NN job) (NNS openings)))\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(PP (IN at) (NP (NNP LinkedIn)))\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NN search)\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "search\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(IN for)\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NP (NN machine) (NN learning) (NN job) (NNS openings))\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "for\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NN machine)\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NN learning)\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NN job)\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NNS openings)\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "machine\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "learning\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "job\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "openings\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(IN at)\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NP (NNP LinkedIn))\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "at\n",
-      "\n",
-      "\n",
-      "<class 'nltk.tree.Tree'>\n",
-      "(NNP LinkedIn)\n",
-      "\n",
-      "\n",
-      "<class 'str'>\n",
-      "LinkedIn\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for tr in sub:\n",
-    "    subT = tr\n",
-    "    for s in subT:\n",
-    "        print(type(s))\n",
-    "        print(s)\n",
-    "    print(\"\\n\")"
+    "# for tr in sub:\n",
+    "#     subT = tr\n",
+    "#     for s in subT:\n",
+    "#         print(type(s))\n",
+    "#         print(s)\n",
+    "#     print(\"\\n\")"
    ]
   }
  ],
