--- a/final position identifier.ipynb
+++ b/final position identifier.ipynb
@@ -2,11 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding synonyms of the word search...\n",
+      "Stemming...\n",
+      "Lemmitizating...\n",
+      "Resultant list: \n",
+      "['find a lost item', 'find', 'find inform', 'rout up', 'explor', 'forag', 'frisk', 'hunt', 'look', 'manhunt', 'pursuit', 'quest', 'ransack', 'scour', 'search']\n",
+      "\n",
+      "\n",
+      "Finding synonyms of the word add...\n",
+      "Stemming...\n",
+      "Lemmitizating...\n",
+      "Resultant list: \n",
+      "['add', 'comput a sum', 'add on', 'adjoin', 'button', 'butyl', 'compound', 'concaten', 'enrich', 'foot', 'fortifi', 'gild the lili', 'includ', 'inject', 'intercal']\n",
+      "\n",
+      "\n",
+      "Tranformed string is: ['Can', 'search', 'himanshu', 'singh']\n",
+      "Operation: search\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -18,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +167,7 @@
        "ParentedTree('ROOT', [ParentedTree('NP', [ParentedTree('NP', [ParentedTree('NN', ['search'])]), ParentedTree('PP', [ParentedTree('IN', ['for']), ParentedTree('NP', [ParentedTree('NP', [ParentedTree('JJ', ['senior']), ParentedTree('NN', ['software']), ParentedTree('NN', ['developer']), ParentedTree('NN', ['job']), ParentedTree('NNS', ['openings'])]), ParentedTree('PP', [ParentedTree('IN', ['at']), ParentedTree('NP', [ParentedTree('NNP', ['LinkedIn'])])])])])])])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +246,7 @@
        "ParentedTree('NP', [ParentedTree('JJ', ['senior']), ParentedTree('NN', ['software']), ParentedTree('NN', ['developer']), ParentedTree('NN', ['job']), ParentedTree('NNS', ['openings'])])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,19 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'position' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1d42b7567c79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mposition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'position' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'senior software developer job openings'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
