--- a/LinkedIn_Operation_identification.ipynb
+++ b/LinkedIn_Operation_identification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -143,32 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding synonyms of the word search...\n",
-      "['find a lost item', 'find', 'finding information', 'rout up', 'find a lost item', 'finding a lost item', 'exploration', 'foraging', 'frisk', 'hunt', 'looking', 'manhunt', 'pursuit', 'quest', 'ransacking', 'scouring', 'search', 'search', 'search', 'search']\n",
-      "Stemming...\n",
-      "Lemmitizating...\n",
-      "Resultant list: \n",
-      "['find a lost item', 'find', 'find inform', 'rout up', 'explor', 'forag', 'frisk', 'hunt', 'look', 'manhunt', 'pursuit', 'quest', 'ransack', 'scour', 'search']\n",
-      "\n",
-      "\n",
-      "Finding synonyms of the word add...\n",
-      "['add', 'add', 'compute a sum', 'add on', 'add', 'add', 'add', 'add', 'adjoin', 'button', 'butylate', 'compound', 'concatenate', 'enrich', 'foot', 'fortify', 'gild the lily', 'include', 'inject', 'intercalate']\n",
-      "Stemming...\n",
-      "Lemmitizating...\n",
-      "Resultant list: \n",
-      "['add', 'comput a sum', 'add on', 'adjoin', 'button', 'butyl', 'compound', 'concaten', 'enrich', 'foot', 'fortifi', 'gild the lili', 'includ', 'inject', 'intercal']\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# words whose synonyms are to be found\n",
     "word1 = \"search\"\n",
@@ -178,26 +155,26 @@
     "\n",
     "synWord = []\n",
     "for word in wordList:\n",
-    "    print(\"Finding synonyms of the word \" + word + \"...\")\n",
+    "#     print(\"Finding synonyms of the word \" + word + \"...\")\n",
     "    synword = findSynonyms(word)\n",
-    "    print(synword)\n",
+    "#     print(synword)\n",
     "    \n",
-    "    print(\"Stemming...\")\n",
+    "#     print(\"Stemming...\")\n",
     "    StemmedSynWord = stemming(synword)\n",
     "\n",
-    "    print(\"Lemmitizating...\")\n",
+    "#     print(\"Lemmitizating...\")\n",
     "    lemmaSynWord = lemmitization(StemmedSynWord)\n",
     "\n",
-    "    print(\"Resultant list: \")\n",
-    "    print(lemmaSynWord)\n",
+    "#     print(\"Resultant list: \")\n",
+    "#     print(lemmaSynWord)\n",
     "    \n",
-    "    print(\"\\n\")\n",
+    "#     print(\"\\n\")\n",
     "    synWord.append(lemmaSynWord)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -217,35 +194,29 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tranformed string is: ['Can', 'search', 'himanshu', 'singh']\n",
-      "Operation: search\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for number in range(1, 6):\n",
-    "words = Transform(string2)\n",
     "\n",
-    "print(\"Tranformed string is: \" + str(words))\n",
+    "def main():\n",
+    "    \n",
+    "    words = Transform(string2)\n",
     "\n",
-    "flag = 0\n",
-    "for word in words:\n",
-    "    for idx, synonyms in enumerate(synWord): \n",
-    "        if(word in synonyms):        \n",
-    "            print(\"Operation: \" + wordList[idx])\n",
-    "            flag = 1\n",
+    "    print(\"Tranformed string is: \" + str(words))\n",
+    "\n",
+    "    flag = 0\n",
+    "    for word in words:\n",
+    "        for idx, synonyms in enumerate(synWord): \n",
+    "            if(word in synonyms):        \n",
+    "                print(\"Operation: \" + wordList[idx])\n",
+    "                flag = 1\n",
+    "                break\n",
+    "\n",
+    "        if(flag == 1):\n",
     "            break\n",
-    "        \n",
-    "    if(flag == 1):\n",
-    "        break\n",
     "\n",
-    "if(flag == 0):\n",
-    "    print(\"You are not speaking a valid operation\")"
+    "    if(flag == 0):\n",
+    "        print(\"You are not speaking a valid operation\")"
    ]
   }
  ],
