--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,29 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding synonyms of the word search...\n",
-      "Stemming...\n",
-      "Lemmitizating...\n",
-      "Resultant list: \n",
-      "['find a lost item', 'find', 'find inform', 'rout up', 'explor', 'forag', 'frisk', 'hunt', 'look', 'manhunt', 'pursuit', 'quest', 'ransack', 'scour', 'search']\n",
-      "\n",
-      "\n",
-      "Finding synonyms of the word add...\n",
-      "Stemming...\n",
-      "Lemmitizating...\n",
-      "Resultant list: \n",
-      "['add', 'comput a sum', 'add on', 'adjoin', 'button', 'butyl', 'compound', 'concaten', 'enrich', 'foot', 'fortifi', 'gild the lili', 'includ', 'inject', 'intercal']\n",
-      "\n",
-      "\n",
-      "Tranformed string is: ['Can', 'search', 'himanshu', 'singh']\n",
-      "Operation: search\n",
       "(ROOT\n",
       "  (NP (NN search) (NN LinkedIn)))\n",
       "[]\n"
@@ -37,12 +21,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from nltk import pos_tag\n",
+    "from nltk import RegexpChunkParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOl\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(position == \"\"):\n",
+    "    print(\"LOl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'search LinkedIn'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# perform ner tagging\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'LinkedIn': 'ORGANIZATION'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tokenize\n",
+    "words = word_tokenize(text)\n",
+    "\n",
+    "# pos tagging\n",
+    "tagged = pos_tag(words)\n",
+    "\n",
+    "# chunking\n",
+    "ne_chunked_sents = nltk.ne_chunk(tagged)\n",
+    "\n",
+    "named_entities = {}\n",
+    "for tagged_tree in ne_chunked_sents:\n",
+    "  if(hasattr(tagged_tree, 'label')):\n",
+    "      entity_name = ' '.join(c[0] for c in tagged_tree.leaves()) #\n",
+    "      entity_type = tagged_tree.label() # get NE category\n",
+    "      named_entities[entity_name] = entity_type\n",
+    "print(named_entities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinkedIn\n"
+     ]
+    }
+   ],
+   "source": [
+    "companyName = \"\"\n",
+    "for idx, cur in enumerate(named_entities.keys()):\n",
+    "    if(cur == 'ORGANIZATION'):\n",
+    "        companyName = "
+   ]
   }
  ],
  "metadata": {
