--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,10 @@
      "output_type": "stream",
      "text": [
       "(ROOT\n",
-      "  (NP (NN search) (NN LinkedIn)))\n",
+      "  (NP\n",
+      "    (NP (NNS sales))\n",
+      "    (PP (IN at)\n",
+      "      (NP (NNP LinkedIn)))))\n",
       "[]\n"
      ]
     }
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -51,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'search LinkedIn'"
+       "'sales at LinkedIn'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -104,22 +107,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companyName = \"\"\n",
+    "for key, val in named_entities.items():\n",
+    "    if(val == 'ORGANIZATION'):\n",
+    "        companyName = key\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LinkedIn\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'LinkedIn'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "companyName = \"\"\n",
-    "for idx, cur in enumerate(named_entities.keys()):\n",
-    "    if(cur == 'ORGANIZATION'):\n",
-    "        companyName = "
+    "companyName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'dep': 'ROOT',\n",
+       "  'dependent': 1,\n",
+       "  'dependentGloss': 'sales',\n",
+       "  'governor': 0,\n",
+       "  'governorGloss': 'ROOT'},\n",
+       " {'dep': 'case',\n",
+       "  'dependent': 2,\n",
+       "  'dependentGloss': 'at',\n",
+       "  'governor': 3,\n",
+       "  'governorGloss': 'LinkedIn'},\n",
+       " {'dep': 'nmod:at',\n",
+       "  'dependent': 3,\n",
+       "  'dependentGloss': 'LinkedIn',\n",
+       "  'governor': 1,\n",
+       "  'governorGloss': 'sales'}]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output['sentences'][0]['enhancedPlusPlusDependencies']"
    ]
   }
  ],
