--- a/final position identifier.ipynb
+++ b/final position identifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,46 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "synJob = findSynonyms('jobs')\n",
-    "JobSyn = ['job']\n",
-    "for syn in synJob:\n",
-    "    if syn not in JobSyn:\n",
-    "        JobSyn.append(syn)\n",
+    "todo = ['position', 'openings', 'profiles', 'jobs']\n",
+    "synonymz = []\n",
     "\n",
-    "# print(JobSyn)\n",
-    "\n",
-    "synOpen = findSynonyms('openings')\n",
-    "OpenSyn = ['opening']\n",
-    "for syn in synOpen:\n",
-    "    if syn not in OpenSyn:\n",
-    "        OpenSyn.append(syn)\n",
-    "\n",
-    "# print(OpenSyn)\n",
-    "\n",
-    "synPos = findSynonyms('position')\n",
-    "PosSyn = ['position']\n",
-    "for syn in synPos:\n",
-    "    if syn not in PosSyn:\n",
-    "        PosSyn.append(syn)\n",
-    "\n",
-    "# print(PosSyn)\n",
-    "\n",
-    "synPro = findSynonyms('profiles')\n",
-    "ProSyn = ['profiles']\n",
-    "for syn in synPro:\n",
-    "    if syn not in ProSyn:\n",
-    "        ProSyn.append(syn)\n",
-    "\n",
-    "# print(synPro)"
+    "for cur in todo:\n",
+    "    synCur = findSynonyms(cur)\n",
+    "    curSyn = [cur]\n",
+    "    for syn in synCur:\n",
+    "        if syn not in curSyn:\n",
+    "            curSyn.append(syn)\n",
+    "    synonymz.append(curSyn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# synonymz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +129,7 @@
        "ParentedTree('ROOT', [ParentedTree('NP', [ParentedTree('NP', [ParentedTree('NNS', ['sales'])]), ParentedTree('NP', [ParentedTree('NP', [ParentedTree('NNS', ['jobs'])]), ParentedTree('PP', [ParentedTree('IN', ['at']), ParentedTree('NP', [ParentedTree('NNP', ['LinkedIn'])])])])])])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +160,7 @@
     "tree_location = []\n",
     "flag = 0\n",
     "\n",
-    "syn = [OpenSyn, PosSyn, ProSyn, JobSyn]\n",
-    "for cur in syn:\n",
+    "for cur in synonymz:\n",
     "    for word in cur:\n",
     "        if word in leaf_values:\n",
     "            leaf_index = leaf_values.index(word)\n",
@@ -188,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +194,7 @@
        "ParentedTree('NP', [ParentedTree('NNS', ['jobs'])])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,20 +206,18 @@
     "subtree = ptree[treeLoc]\n",
     "position = \"\"\n",
     "if(treeLoc != []):\n",
-    "\n",
     "    childNodes = subtree.leaves()\n",
     "    print(childNodes)\n",
     "\n",
     "    position = (\" \".join(childNodes))\n",
     "    print(position)\n",
-    "    \n",
     "\n",
     "subtree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +226,7 @@
        "'jobs'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
