--- a/LinkedIn_Operation_identification.ipynb
+++ b/LinkedIn_Operation_identification.ipynb
@@ -144,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# words whose synonyms are to be found\n",
@@ -193,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# for number in range(1, 6):\n",
@@ -208,7 +212,8 @@
     "    for word in words:\n",
     "        for idx, synonyms in enumerate(synWord): \n",
     "            if(word in synonyms):        \n",
-    "                print(\"Operation: \" + wordList[idx])\n",
+    "#                 print(\"Operation: \" + wordList[idx])\n",
+    "                return wordList[idx]\n",
     "                flag = 1\n",
     "                break\n",
     "\n",
@@ -216,7 +221,8 @@
     "            break\n",
     "\n",
     "    if(flag == 0):\n",
-    "        print(\"You are not speaking a valid operation\")"
+    "        return \"Invalid operation\"\n",
+    "#         print(\"You are not speaking a valid operation\")"
    ]
   }
  ],
